Support GPT 3.5 turbo

--- a/config_sample.ini
+++ b/config_sample.ini
@@ -4,7 +4,7 @@
 api_key =
 base_url = https://api.openai.com
 path = /v1/completions
-model = text-davinci-003
+model = gpt-3.5-turbo
 max_response_tokens = 2048
 max_prompt_chars = 4096
 temperature = 0.5
