--- a/config_sample.ini
+++ b/config_sample.ini
@@ -3,7 +3,7 @@
 [api_client]
 api_key =
 base_url = https://api.openai.com
-path = /v1/completions
+path = /v1/chat/completions
 model = gpt-3.5-turbo
 max_response_tokens = 2048
 max_prompt_chars = 4096
@@ -13,3 +13,5 @@ temperature = 0.5
 min_seconds_between_requests_per_user = 5
 host = localhost
 port = 5000
+whitelist_enabled = True
+whitelist = 127.0.0.1
