Add context and system message capability

--- a/config_sample.ini
+++ b/config_sample.ini
@@ -7,11 +7,13 @@ path = /v1/chat/completions
 model = gpt-3.5-turbo
 max_response_tokens = 2048
 max_prompt_chars = 4096
+prompt_history_length = 3
 temperature = 0.5
+system_message =
 
 [server]
 min_seconds_between_requests_per_user = 5
-host = localhost
+host = 0.0.0.0
 port = 5000
 whitelist_enabled = True
-whitelist = 127.0.0.1
+whitelist = 127.0.0.1, 10.0.0.106
