Add max_response_tokens option, prune dialogues

--- a/config_sample.ini
+++ b/config_sample.ini
@@ -5,15 +5,17 @@ api_key =
 base_url = https://api.openai.com
 path = /v1/chat/completions
 model = gpt-3.5-turbo
+max_conversation_tokens = 4096
 max_response_tokens = 2048
 max_prompt_chars = 4096
-prompt_history_length = 3
+max_dialogues_per_conversation = 5
+conversation_prune_after_seconds = 206125
 temperature = 0.5
 system_message =
 
 [server]
 min_seconds_between_requests_per_user = 5
-host = 0.0.0.0
+host = localhost
 port = 5000
 whitelist_enabled = True
 whitelist = 127.0.0.1, 10.0.0.106
