--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,46 @@
+annotated-types==0.7.0
+anthropic==0.45.2
+anyio==4.8.0
+blinker==1.9.0
+cachetools==5.5.1
+certifi==2025.1.31
+charset-normalizer==3.4.1
+click==8.1.8
+distro==1.9.0
+Flask==2.3.2
+google-ai-generativelanguage==0.6.15
+google-api-core==2.24.1
+google-api-python-client==2.160.0
+google-auth==2.38.0
+google-auth-httplib2==0.2.0
+google-generativeai==0.8.4
+googleapis-common-protos==1.66.0
+grpcio==1.70.0
+grpcio-status==1.70.0
+h11==0.14.0
+httpcore==1.0.7
+httplib2==0.22.0
+httpx==0.28.1
+idna==3.10
+itsdangerous==2.2.0
+Jinja2==3.1.5
+jiter==0.8.2
+MarkupSafe==3.0.2
+pillow==11.1.0
+proto-plus==1.26.0
+protobuf==5.29.3
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
+pydantic==2.10.6
+pydantic_core==2.27.2
+pyparsing==3.2.1
+regex==2024.11.6
 requests==2.31.0
-flask==2.3.2
+rsa==4.9
+sniffio==1.3.1
 tiktoken==0.7.0
-google-generativeai
-pillow
-anthropic
+tqdm==4.67.1
+typing_extensions==4.12.2
+uritemplate==4.1.1
+urllib3==2.3.0
+Werkzeug==3.1.3
